--- a/proyecto1/user interface.ipynb
+++ b/proyecto1/user interface.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "e637a164",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "8e658b16",
    "metadata": {
     "scrolled": true
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "id": "ab786d65",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
     "        \n",
     "        if \"Difuminado\" in options_dropdown.value:\n",
     "            cv2.imshow('frame', blurFilter(frame,\n",
-    "                                           blur_weights = np.ones(kernel_sz.value)/kernel_sz.value)\n",
+    "                                           blur_weights = np.ones(int(kernel_sz.value))/int(kernel_sz.value))\n",
     "                      )\n",
     "\n",
     "        ''' Sharpness '''  \n",
@@ -113,54 +113,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "altered-pound",
+   "metadata": {},
+   "source": [
+    "#### Nota: Para cerrar la ventana de vídeo, se debe presionar la tecla q hasta que la cámara se desactive."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "id": "42043409",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e31c929b8d246fcaa83bc0b5efb7cf8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Dropdown(description='Seleccione un modo: ', index=2, layout=Layout(height='100%', width='70%'), options=('Det…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ce17ec3278e14349a1bd7a2e8afb3208",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatSlider(value=3.0, continuous_update=False, description='Tamaño del kernel (Solo aplica para \"Difuminado d…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e1041fde37d743d898517bf7f1a2109b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(description='Empezar video', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def visualize_on_click(btn_object):\n",
     "    \n",
@@ -176,7 +141,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -190,7 +155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
